Production/Production/src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <description>Used for matching the Post Chat Survey object (Chat Request Time + _ + Chat Start Time)</description>
        <externalId>true</externalId>
        <label>Chat Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Prod__c</fullName>
        <label>Contact Us Prod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Sub_Prod__c</fullName>
        <label>Contact Us Sub-Prod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Site__c</fullName>
        <label>Current Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPA_Verified__c</fullName>
        <label>DPA Verified</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Used to lookup the &apos;Department&apos; for the record &apos;Owner&apos; from the &apos;User&apos; Record.</description>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Problem__c</fullName>
        <label>Description of Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>(Transfer_Accepted_Maximum__c -  Transfer_Requested_Minimum__c) * 60 * 60 * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Used to lookup the &apos;Division&apos; for the record &apos;Owner&apos; from the &apos;User&apos; Record.</description>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>&apos;Email address&apos; Saved from the LiveAgent PreChat Form</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>&apos;Name&apos; Saved from the LiveAgent PreChat Form</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAcceptedTransfer__c</fullName>
        <formula>Transfers_Accepted_Count__c &gt;0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAcceptedTransfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTransfer__c</fullName>
        <formula>Transfers_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsTransfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Issues__c</fullName>
        <label>Number of Open Issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>&apos;Phone Number&apos; Saved from the LiveAgent PreChat Form</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Centre_Code__c</fullName>
        <label>Service Centre Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Centre_URL__c</fullName>
        <label>Service Centre URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Transfer_Accepted_Maximum__c</fullName>
        <label>Transfer Accepted Maximum</label>
        <summarizedField>LiveChatTranscriptEvent.Time</summarizedField>
        <summaryFilterItems>
            <field>LiveChatTranscriptEvent.Type</field>
            <operation>equals</operation>
            <value>Transfer Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>LiveChatTranscriptEvent.LiveChatTranscriptId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfer_Requested_Minimum__c</fullName>
        <label>Transfer Requested Minimum</label>
        <summarizedField>LiveChatTranscriptEvent.Time</summarizedField>
        <summaryFilterItems>
            <field>LiveChatTranscriptEvent.Type</field>
            <operation>equals</operation>
            <value>Transfer Requested</value>
        </summaryFilterItems>
        <summaryForeignKey>LiveChatTranscriptEvent.LiveChatTranscriptId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfers_Accepted_Count__c</fullName>
        <label>Transfers Accepted Count</label>
        <summaryFilterItems>
            <field>LiveChatTranscriptEvent.Type</field>
            <operation>equals</operation>
            <value>Transfer Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>LiveChatTranscriptEvent.LiveChatTranscriptId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfers_Count__c</fullName>
        <label>Transfers Count</label>
        <summaryFilterItems>
            <field>LiveChatTranscriptEvent.Type</field>
            <operation>equals</operation>
            <value>Transfer Requested</value>
        </summaryFilterItems>
        <summaryForeignKey>LiveChatTranscriptEvent.LiveChatTranscriptId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>